# valkyrie

./: .gitignore  CLAUDE.md  LICENSE  README.md  install.sh  pyproject.toml
.claude/hooks/: post-tool-use.sh  pre-tool-use.sh
case-templates/: CASE.md
docs/: accuracy-report.md  architecture-diagram.md  demo-recording-guide.md  devpost-submission.md  evidence-dataset-docs.md  sift-wsl-setup.md
docs/sample-output/SRL2015-XP/report/: findings.json  investigation-report.md
docs/sample-output/SRL2018-DC/report/: findings.json  investigation-report.md
docs/sample-output/TEST-001/: inventory.json  synthesis.json  triage.json
docs/sample-output/TEST-001/analysis/: hypothesis-testing.json  memory-analysis.json
docs/sample-output/TEST-001/corrections/: validation-summary.json
docs/superpowers/specs/: 2026-04-16-ai-adversary-detection-design.md
mcp-server/: __init__.py  denylist.py  server.py
mcp-server/parsers/: __init__.py  common.py
mcp-server/tools/: __init__.py  disk.py  memory.py  registry.py  scanner.py  timeline.py
skills/ir-analysis/: SKILL.md
skills/ir-analysis/protocols/: evidence-collector.md  orchestrator.md  self-correction.md
skills/ir-analysis/templates/: accuracy-report.md  correction-template.json  finding-template.json  investigation-report.md  timeline-template.md
tests/: __init__.py  test_parsers.py
tests/sample_outputs/: fls_output.txt  mmls_output.txt  strings_output.txt  vol_cmdline_output.txt  vol_malfind_output.txt  vol_netscan_output.txt  vol_pslist_output.txt  yara_output.txt
(+12 files in other folders)
